Auto version from git, use specif runner on Centos7, move create appimage script in app folder, change the appimage name with current version, add qt plugin to install with appimage

--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -30,8 +30,7 @@
 # Ninja
 #################################################
 job-centos7-ninja-gcc:
-  tags: [ "docker-test-centos7-liblinphone-nuc" ]
-  #image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
+  tags: [ "docker" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-desktop/bc-dev-centos7-qt-fuse-wget:5.12.5
   except:
     refs:
