--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -184,11 +184,11 @@ elseif (APPLE)
     foreach (FRAMEWORK ${FRAMEWORKS_NAMES})
       execute_process(COMMAND "codesign" "--verbose" "-s" "${LINPHONE_BUILDER_SIGNING_IDENTITY}" "${FRAMEWORK}")
     endforeach ()
-    install(CODE "file(GLOB PLUGINS_NAMES \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/Plugins/*\")
+    install(CODE "file(GLOB PLUGINS_NAMES \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/PlugIns/*\")
     foreach (PLUGIN \${PLUGINS_NAMES})
       file(GLOB PLUGINS_FILES \"\${PLUGIN}/*\")
       foreach (PLUGIN_FILE \${PLUGINS_FILES})
-        execute_process(COMMAND \"codesign\" \"--verbose\" \"-s\" \"${LINPHONE_BUILDER_SIGNING_IDENTITY}\" \"\${PLUGIN_FILE}\")\")
+        execute_process(COMMAND \"codesign\" \"--verbose\" \"-s\" \"${LINPHONE_BUILDER_SIGNING_IDENTITY}\" \"\${PLUGIN_FILE}\")
       endforeach ()
     endforeach ()")
     install( CODE "execute_process(COMMAND \"codesign\" \"--verbose\" \"-s\" \"${LINPHONE_BUILDER_SIGNING_IDENTITY}\" \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app\")")
