--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -180,10 +180,10 @@ elseif (APPLE)
     install( CODE "execute_process(COMMAND ${DEPLOYQT_PROGRAM} \${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app -qmldir=${LINPHONE_QML_DIR})")
   endif()
   if (LINPHONE_BUILDER_SIGNING_IDENTITY)
-    file(GLOB FRAMEWORKS_NAMES "${LINPHONE_OUTPUT_DIR}/Frameworks/*")
-    foreach (FRAMEWORK ${FRAMEWORKS_NAMES})
-      execute_process(COMMAND "codesign" "--verbose" "-s" "${LINPHONE_BUILDER_SIGNING_IDENTITY}" "${FRAMEWORK}")
-    endforeach ()
+    install(CODE "file(GLOB FRAMEWORKS_NAMES \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/Frameworks/*\")
+      foreach (FRAMEWORK \${FRAMEWORKS_NAMES})
+        execute_process(COMMAND \"codesign\" \"--verbose\" \"-s\" \"${LINPHONE_BUILDER_SIGNING_IDENTITY}\" \"${FRAMEWORK}\")
+      endforeach ()")
     install(CODE "file(GLOB PLUGINS_NAMES \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/PlugIns/*\")
     foreach (PLUGIN \${PLUGINS_NAMES})
       file(GLOB PLUGINS_FILES \"\${PLUGIN}/*\")
