--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -182,7 +182,7 @@ elseif (APPLE)
   if (LINPHONE_BUILDER_SIGNING_IDENTITY)
     install(CODE "file(GLOB FRAMEWORKS_NAMES \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/Frameworks/*\")
       foreach (FRAMEWORK \${FRAMEWORKS_NAMES})
-        execute_process(COMMAND \"codesign\" \"--verbose\" \"-s\" \"${LINPHONE_BUILDER_SIGNING_IDENTITY}\" \"${FRAMEWORK}\")
+        execute_process(COMMAND \"codesign\" \"--verbose\" \"-s\" \"${LINPHONE_BUILDER_SIGNING_IDENTITY}\" \"\${FRAMEWORK}\")
       endforeach ()")
     install(CODE "file(GLOB PLUGINS_NAMES \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/PlugIns/*\")
     foreach (PLUGIN \${PLUGINS_NAMES})
