Reduce AppImage size, remove duplicate libraries and use correct folders, use git versionning for installer name, add notarization script and CI integration, remove linuxdeploy binaries

--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -92,6 +92,7 @@ job-macosx-makefile-package:
   script:
     - *build_all_script
     - codesign --verbose -s "$MACOS_SIGNING_IDENTITY" OUTPUT/Packages/Linphone*.dmg
+    - ./../tools/app_notarization.sh
   artifacts:
     paths:
       - build/OUTPUT/Packages/Linphone*.dmg
