--- a/.gitlab-ci-files/job-linux-desktop.yml
+++ b/.gitlab-ci-files/job-linux-desktop.yml
@@ -6,6 +6,9 @@
   stage: build
   extends: .linux-prepare
   script:
+    - echo $CI_BUILDS_DIR
+    - echo $CI_BUILDS_DIR
+    - echo $CI_DEBUG_TRACE
     - cmake --version
     - export CC=$CC
     - export CXX=$CXX
@@ -16,7 +19,7 @@
     - echo $CMAKE_SANITIZER_OPTIONS
 # SDK Building
     - cd build
-    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
+    - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS
     - cmake --build . --target all $LBC_NODEBUG_OPTIONS
   artifacts:
     paths:
