--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,11 @@ variables:
   MAKEFILE_JOBS: 5
   CCACHE_SIZE: 2G
 #this option is used to speedup submodule building times, when we don't need to trace debug (like SDK where it is already tested in its project)
-  LBC_NODEBUG_OPTIONS : --parallel $MAKEFILE_JOBS 
+  LBC_NODEBUG_OPTIONS : --parallel $MAKEFILE_JOBS
   DEFAULT_LINUX_CMAKE_OPTIONS: -DCMAKE_BUILD_PARALLEL_LEVEL=$MAKEFILE_JOBS
   DEFAULT_MACOS_CMAKE_OPTIONS: -DCMAKE_BUILD_PARALLEL_LEVEL=$MAKEFILE_JOBS
   DEFAULT_WINDOWS_CMAKE_OPTIONS: -DCMAKE_BUILD_PARALLEL_LEVEL=$MAKEFILE_JOBS
-  
+
 #  DEFAULT_LINUX_CMAKE_OPTIONS: -DENABLE_NON_FREE_CODECS=YES -DENABLE_OPENH264=YES
 #  DEFAULT_MACOS_CMAKE_OPTIONS: -DCMAKE_OSX_DEPLOYMENT_TARGET=10.11 -DENABLE_UPDATE_CHECK=YES
 #  DEFAULT_WINDOWS_CMAKE_OPTIONS: -DENABLE_NON_FREE_CODECS=YES -DENABLE_OPENH264=YES -DENABLE_UPDATE_CHECK=YES
@@ -22,7 +22,7 @@ variables:
 
 
 #################################################
-# Platforms to test 
+# Platforms to test
 #################################################
 
 .job-prepare:
@@ -32,14 +32,14 @@ variables:
 include:
   - '.gitlab-ci-files/job-linux-prepare.yml'
   - '.gitlab-ci-files/job-linux-desktop.yml'
-  - '.gitlab-ci-files/job-linux-desktop-debian8.yml'
-  - '.gitlab-ci-files/job-linux-desktop-debian9.yml'
+#  - '.gitlab-ci-files/job-linux-desktop-debian8.yml'
+#  - '.gitlab-ci-files/job-linux-desktop-debian9.yml'
 ##  - '.gitlab-ci-files/job-linux-desktop-debian10.yml'
-  - '.gitlab-ci-files/job-linux-desktop-ubuntu-rolling.yml'
-  - '.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml'
+#  - '.gitlab-ci-files/job-linux-desktop-ubuntu-rolling.yml'
+#  - '.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml'
   - '.gitlab-ci-files/job-linux-desktop-centos7.yml'
-  - '.gitlab-ci-files/job-windows-desktop.yml'
-  - '.gitlab-ci-files/job-macosx-desktop.yml'
+#  - '.gitlab-ci-files/job-windows-desktop.yml'
+#  - '.gitlab-ci-files/job-macosx-desktop.yml'
 
 
 #  - '.gitlab-ci-files/job-linux.yml'
