--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,14 +32,14 @@ variables:
 include:
   - '.gitlab-ci-files/job-linux-prepare.yml'
   - '.gitlab-ci-files/job-linux-desktop.yml'
-#  - '.gitlab-ci-files/job-linux-desktop-debian8.yml'
-#  - '.gitlab-ci-files/job-linux-desktop-debian9.yml'
-##  - '.gitlab-ci-files/job-linux-desktop-debian10.yml'
-#  - '.gitlab-ci-files/job-linux-desktop-ubuntu-rolling.yml'
-#  - '.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml'
+  - '.gitlab-ci-files/job-linux-desktop-debian8.yml'
+  - '.gitlab-ci-files/job-linux-desktop-debian9.yml'
+#  - '.gitlab-ci-files/job-linux-desktop-debian10.yml'
+  - '.gitlab-ci-files/job-linux-desktop-ubuntu-rolling.yml'
+  - '.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml'
   - '.gitlab-ci-files/job-linux-desktop-centos7.yml'
-#  - '.gitlab-ci-files/job-windows-desktop.yml'
-#  - '.gitlab-ci-files/job-macosx-desktop.yml'
+  - '.gitlab-ci-files/job-windows-desktop.yml'
+  - '.gitlab-ci-files/job-macosx-desktop.yml'
 
 
 #  - '.gitlab-ci-files/job-linux.yml'
