Add empty dependencies when needed and set CMAKE_INSTALL_LIBDIR to lib folder instead of lib64

--- a/.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml
+++ b/.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml
@@ -1,6 +1,7 @@
 job-archlinux-latest-ninja-clang:
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
+  dependencies: []
   except:
     refs:
       - schedules
@@ -17,6 +18,7 @@ job-archlinux-latest-ninja-clang:
 job-archlinux-latest-makefile-gcc:
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
+  dependencies: []
   only:
     variables:
       - $NIGHTLY_MASTER
@@ -30,6 +32,7 @@ job-archlinux-latest-makefile-gcc:
 job-archlinux-latest-makefile-clang:
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
+  dependencies: []
   only:
     variables:
       - $NIGHTLY_MASTER
@@ -43,6 +46,7 @@ job-archlinux-latest-makefile-clang:
 job-archlinux-latest-ninja-gcc:
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
+  dependencies: []
   only:
     variables:
       - $NIGHTLY_MASTER
@@ -54,6 +58,7 @@ job-archlinux-latest-ninja-gcc:
 
 job-archlinux-latest-ninja-gcc-novideo:
   tags: [ "docker-archlinux-latest" ]
+  dependencies: []
   only:
     variables:
       - $NIGHTLY_MASTER
@@ -64,6 +69,7 @@ job-archlinux-latest-ninja-gcc-novideo:
 job-archlinux-latest-ninja-clang-novideo:
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
+  dependencies: []
   only:
     variables:
       - $NIGHTLY_MASTER
