--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -37,7 +37,7 @@ job-centos7-ninja-gcc:
     refs:
       - schedules
   variables:
-    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DCMAKE_INSTALL_LIBDIR=lib
+    CMAKE_OPTIONS: -DCMAKE_INSTALL_LIBDIR=lib
     CMAKE_GENERATOR: Ninja
     CC: gcc
     CXX: g++
