Fix Platform generator settings Move debug message to a better location Link to Linphone libraries folder Change linphone output name to liblinphone Add LINPHONE_LIB_DIRS to get library path of Linphone

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ foreach(var ${vars})
 		if( "${var}" STREQUAL "CMAKE_PREFIX_PATH")
 			set(PREFIX_PATH ";${${var}}")
 		endif()
-	elseif("${var}" STREQUAL "CMAKE_GENERATOR_PLATFORM")
+            elseif("${var}" STREQUAL "CMAKE_GENERATOR_PLATFORM" AND NOT("${${var}}" STREQUAL ""))
 		message(STATUS "User-Setting Platform to ${${var}}")
 	endif()
 endforeach()
@@ -111,10 +111,9 @@ list(APPEND APP_OPTIONS "-DENABLE_RELATIVE_PREFIX=${ENABLE_RELATIVE_PREFIX}")
 
 list(APPEND APP_OPTIONS "-DLINPHONE_OUTPUT_DIR=${LINPHONE_OUTPUT_DIR}")
 if(NOT CMAKE_GENERATOR_PLATFORM AND WIN32)
-	set(CMAKE_GENERATOR_PLATFORM "Win32")
-	message(STATUS "Setting Platform to ${${var}}")
+        set(CMAKE_GENERATOR_PLATFORM "Win32")
 endif()
-
+message(STATUS "Setting Platform to ${CMAKE_GENERATOR_PLATFORM}")
 include(ExternalProject)
 set(PROJECT_BUILD_COMMAND "")
 if(CMAKE_BUILD_PARALLEL_LEVEL)
